task 3+4 done, task 5 started

--- a/task_3/analysis_and_documentation/seabirds_documentation.Rmd
+++ b/task_3/analysis_and_documentation/seabirds_documentation.Rmd
@@ -42,9 +42,10 @@ seabirds <- left_join(birds, ships, "RECORD ID")
 ```{r}
 # Investigate Data --------------------------------------------------------
 
-glimpse(seabirds)
-summary(seabirds)
-skimr::skim(seabirds)
+# commented these out to avoid massive output
+#glimpse(seabirds)
+#summary(seabirds)
+#skimr::skim(seabirds)
 
 na_count <- seabirds %>%
 summarise(across(.fns = ~ sum(is.na(.x)))) 
