--- a/task_4/analysis_and_documentation/candy_analysis_tasks.Rmd
+++ b/task_4/analysis_and_documentation/candy_analysis_tasks.Rmd
@@ -191,7 +191,10 @@ slice(1)
 
 candy_clean %>% 
   filter(!is.na(country)) %>% 
-  mutate(country = if_else(country %in% c("Usa", "Canada", "United Kingdom"), country, "Other")) %>%   group_by(country, candy_type) %>% 
+  mutate(country = if_else(country %in% c("Usa", "Canada", "United Kingdom"), 
+                           country, 
+                           "Other")) %>%
+  group_by(country, candy_type) %>% 
   summarise(new_rating_total = sum(candy_rating_new_system)) %>% 
   arrange(desc(new_rating_total), by_group = TRUE) %>% 
   slice(1)
